--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
         "psr-4": {
             "PruneMazui\\Tetrice\\" : "src/app"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
     }
 }
