--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ]
     }
 }
