--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
             "PruneMazui\\Tetrice\\" : "src/app"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "PruneMazui\\Tetrice\\Tests\\" : "tests/mock"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
     },
