--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,13 @@
     </testsuite>
     <filter>
         <whitelist addUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src</directory>
+            <directory suffix=".php">./src/app</directory>
         </whitelist>
     </filter>
+
+<!--
+    <logging>
+        <log type="coverage-html" target="./report" lowUpperBound="35" highLowerBound="70"/>
+    </logging>
+-->
 </phpunit>
