--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "satooshi/php-coveralls": "^1.0"
     },
     "scripts": {
         "test": [
