--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,9 +20,8 @@
         </whitelist>
     </filter>
 
-<!--
     <logging>
-        <log type="coverage-html" target="./report" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-clover" target="report/clover.xml"/>
+        <!-- <log type="coverage-html" target="./report" lowUpperBound="35" highLowerBound="70"/> -->
     </logging>
--->
 </phpunit>
